--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
+  "browserslist": [ "defaults" ],
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
     "@types/node": "^18.14.2",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/tsconfig": "^0.1.3",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.34.0",
     "eslint-plugin-vue": "^9.9.0",
     "npm-run-all": "^4.1.5",
