--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   "dependencies": {
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
+    "country-flag-icons": "^1.5.7",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
-  "browserslist": [ "defaults" ],
+  "browserslist": [
+    "defaults"
+  ],
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
     "@types/node": "^18.14.2",
