--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
     "country-flag-icons": "^1.5.7",
+    "js-cookie": "^3.0.4",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
